@@ -21,12 +21,10 @@ import org.apache.kafka.common.message.AlterPartitionRequestData;
 import org.apache.kafka.common.message.AlterPartitionRequestData.BrokerState;
 import org.apache.kafka.common.message.AlterPartitionResponseData;
 import org.apache.kafka.common.protocol.ApiKeys;
-import org.apache.kafka.common.protocol.ByteBufferAccessor;
 import org.apache.kafka.common.protocol.Errors;
+import org.apache.kafka.common.protocol.Readable;
 
-import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -54,8 +52,8 @@ public class AlterPartitionRequest extends AbstractRequest {
             .setErrorCode(Errors.forException(e).code()));
     }
 
-    public static AlterPartitionRequest parse(ByteBuffer buffer, short version) {
-        return new AlterPartitionRequest(new AlterPartitionRequestData(new ByteBufferAccessor(buffer), version), version);
+    public static AlterPartitionRequest parse(Readable readable, short version) {
+        return new AlterPartitionRequest(new AlterPartitionRequestData(readable, version), version);
     }
 
     public static class Builder extends AbstractRequest.Builder<AlterPartitionRequest> {
@@ -91,7 +89,7 @@ public class AlterPartitionRequest extends AbstractRequest {
                                 newIsr.add(brokerState.brokerId())
                             );
                             partitionData.setNewIsr(newIsr);
-                            partitionData.setNewIsrWithEpochs(Collections.emptyList());
+                            partitionData.setNewIsrWithEpochs(List.of());
                         }
                     })
                 );
