@@ -20,11 +20,11 @@ import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.message.BeginQuorumEpochRequestData;
 import org.apache.kafka.common.message.BeginQuorumEpochResponseData;
 import org.apache.kafka.common.protocol.ApiKeys;
-import org.apache.kafka.common.protocol.ByteBufferAccessor;
 import org.apache.kafka.common.protocol.Errors;
+import org.apache.kafka.common.protocol.Readable;
 
-import java.nio.ByteBuffer;
-import java.util.Collections;
+import java.util.List;
+
 
 public class BeginQuorumEpochRequest extends AbstractRequest {
     public static class Builder extends AbstractRequest.Builder<BeginQuorumEpochRequest> {
@@ -64,8 +64,8 @@ public class BeginQuorumEpochRequest extends AbstractRequest {
             .setErrorCode(Errors.forException(e).code()));
     }
 
-    public static BeginQuorumEpochRequest parse(ByteBuffer buffer, short version) {
-        return new BeginQuorumEpochRequest(new BeginQuorumEpochRequestData(new ByteBufferAccessor(buffer), version), version);
+    public static BeginQuorumEpochRequest parse(Readable readable, short version) {
+        return new BeginQuorumEpochRequest(new BeginQuorumEpochRequestData(readable, version), version);
     }
 
     public static BeginQuorumEpochRequestData singletonRequest(
@@ -76,10 +76,10 @@ public class BeginQuorumEpochRequest extends AbstractRequest {
     ) {
         return new BeginQuorumEpochRequestData()
                    .setClusterId(clusterId)
-                   .setTopics(Collections.singletonList(
+                   .setTopics(List.of(
                        new BeginQuorumEpochRequestData.TopicData()
                            .setTopicName(topicPartition.topic())
-                           .setPartitions(Collections.singletonList(
+                           .setPartitions(List.of(
                                new BeginQuorumEpochRequestData.PartitionData()
                                    .setPartitionIndex(topicPartition.partition())
                                    .setLeaderEpoch(leaderEpoch)
