@@ -22,11 +22,9 @@ import org.apache.kafka.common.message.DeleteTopicsRequestData.DeleteTopicState;
 import org.apache.kafka.common.message.DeleteTopicsResponseData;
 import org.apache.kafka.common.message.DeleteTopicsResponseData.DeletableTopicResult;
 import org.apache.kafka.common.protocol.ApiKeys;
-import org.apache.kafka.common.protocol.ByteBufferAccessor;
+import org.apache.kafka.common.protocol.Readable;
 
-import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -105,7 +103,7 @@ public class DeleteTopicsRequest extends AbstractRequest {
     public List<Uuid> topicIds() {
         if (version() >= 6)
             return data.topics().stream().map(DeleteTopicState::topicId).collect(Collectors.toList());
-        return Collections.emptyList();
+        return List.of();
     }
     
     public List<DeleteTopicState> topics() {
@@ -114,8 +112,8 @@ public class DeleteTopicsRequest extends AbstractRequest {
         return data.topicNames().stream().map(name -> new DeleteTopicState().setName(name)).collect(Collectors.toList()); 
     }
 
-    public static DeleteTopicsRequest parse(ByteBuffer buffer, short version) {
-        return new DeleteTopicsRequest(new DeleteTopicsRequestData(new ByteBufferAccessor(buffer), version), version);
+    public static DeleteTopicsRequest parse(Readable readable, short version) {
+        return new DeleteTopicsRequest(new DeleteTopicsRequestData(readable, version), version);
     }
 
 }
