@@ -22,11 +22,11 @@ import org.apache.kafka.common.internals.Topic;
 import org.apache.kafka.common.message.JoinGroupRequestData;
 import org.apache.kafka.common.message.JoinGroupResponseData;
 import org.apache.kafka.common.protocol.ApiKeys;
-import org.apache.kafka.common.protocol.ByteBufferAccessor;
 import org.apache.kafka.common.protocol.Errors;
+import org.apache.kafka.common.protocol.Readable;
 
-import java.nio.ByteBuffer;
-import java.util.Collections;
+import java.util.List;
+
 
 public class JoinGroupRequest extends AbstractRequest {
 
@@ -97,7 +97,7 @@ public class JoinGroupRequest extends AbstractRequest {
      *
      * @return whether a known member id is required or not.
      */
-    public static boolean requiresKnownMemberId(short apiVersion) {
+    public static boolean requiresKnownMemberId(int apiVersion) {
         return apiVersion >= 4;
     }
 
@@ -118,7 +118,7 @@ public class JoinGroupRequest extends AbstractRequest {
      */
     public static boolean requiresKnownMemberId(
         JoinGroupRequestData request,
-        short apiVersion
+        int apiVersion
     ) {
         return request.groupInstanceId() == null
             && request.memberId().equals(UNKNOWN_MEMBER_ID)
@@ -151,7 +151,7 @@ public class JoinGroupRequest extends AbstractRequest {
      * @return whether the version supports skipping assignment.
      */
 
-    public static boolean supportsSkippingAssignment(short apiVersion) {
+    public static boolean supportsSkippingAssignment(int apiVersion) {
         return apiVersion >= 9;
     }
 
@@ -198,7 +198,7 @@ public class JoinGroupRequest extends AbstractRequest {
             .setProtocolName(UNKNOWN_PROTOCOL_NAME)
             .setLeader(UNKNOWN_MEMBER_ID)
             .setMemberId(UNKNOWN_MEMBER_ID)
-            .setMembers(Collections.emptyList());
+            .setMembers(List.of());
 
         if (version() >= 7)
             data.setProtocolName(null);
@@ -208,7 +208,7 @@ public class JoinGroupRequest extends AbstractRequest {
         return new JoinGroupResponse(data, version());
     }
 
-    public static JoinGroupRequest parse(ByteBuffer buffer, short version) {
-        return new JoinGroupRequest(new JoinGroupRequestData(new ByteBufferAccessor(buffer), version), version);
+    public static JoinGroupRequest parse(Readable readable, short version) {
+        return new JoinGroupRequest(new JoinGroupRequestData(readable, version), version);
     }
 }
