@@ -20,7 +20,6 @@ import org.apache.kafka.connect.errors.ConnectException;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -67,8 +66,8 @@ public class MirrorHeartBeatConnectorTest {
     @Test
     public void testAlterOffsetsIncorrectPartitionKey() {
         MirrorHeartbeatConnector connector = new MirrorHeartbeatConnector();
-        assertThrows(ConnectException.class, () -> connector.alterOffsets(null, Collections.singletonMap(
-                Collections.singletonMap("unused_partition_key", "unused_partition_value"),
+        assertThrows(ConnectException.class, () -> connector.alterOffsets(null, Map.of(
+                Map.of("unused_partition_key", "unused_partition_value"),
                 SOURCE_OFFSET
         )));
 
@@ -83,7 +82,7 @@ public class MirrorHeartBeatConnectorTest {
     public void testAlterOffsetsMissingPartitionKey() {
         MirrorHeartbeatConnector connector = new MirrorHeartbeatConnector();
 
-        Function<Map<String, ?>, Boolean> alterOffsets = partition -> connector.alterOffsets(null, Collections.singletonMap(
+        Function<Map<String, ?>, Boolean> alterOffsets = partition -> connector.alterOffsets(null, Map.of(
                 partition,
                 SOURCE_OFFSET
         ));
@@ -92,7 +91,7 @@ public class MirrorHeartBeatConnectorTest {
         // Sanity check to make sure our valid partition is actually valid
         assertTrue(alterOffsets.apply(validPartition));
 
-        for (String key : Arrays.asList(SOURCE_CLUSTER_ALIAS_KEY, TARGET_CLUSTER_ALIAS_KEY)) {
+        for (String key : List.of(SOURCE_CLUSTER_ALIAS_KEY, TARGET_CLUSTER_ALIAS_KEY)) {
             Map<String, ?> invalidPartition = new HashMap<>(validPartition);
             invalidPartition.remove(key);
             assertThrows(ConnectException.class, () -> alterOffsets.apply(invalidPartition));
@@ -117,9 +116,9 @@ public class MirrorHeartBeatConnectorTest {
     public void testAlterOffsetsIncorrectOffsetKey() {
         MirrorHeartbeatConnector connector = new MirrorHeartbeatConnector();
 
-        Map<Map<String, ?>, Map<String, ?>> offsets = Collections.singletonMap(
+        Map<Map<String, ?>, Map<String, ?>> offsets = Map.of(
                 sourcePartition("primary", "backup"),
-                Collections.singletonMap("unused_offset_key", 0)
+                Map.of("unused_offset_key", 0)
         );
         assertThrows(ConnectException.class, () -> connector.alterOffsets(null, offsets));
     }
@@ -128,7 +127,7 @@ public class MirrorHeartBeatConnectorTest {
     public void testAlterOffsetsOffsetValues() {
         MirrorHeartbeatConnector connector = new MirrorHeartbeatConnector();
 
-        Function<Object, Boolean> alterOffsets = offset -> connector.alterOffsets(null, Collections.singletonMap(
+        Function<Object, Boolean> alterOffsets = offset -> connector.alterOffsets(null, Map.of(
                 sourcePartition("primary", "backup"),
                 Collections.singletonMap(MirrorUtils.OFFSET_KEY, offset)
         ));
@@ -149,7 +148,7 @@ public class MirrorHeartBeatConnectorTest {
     public void testSuccessfulAlterOffsets() {
         MirrorHeartbeatConnector connector = new MirrorHeartbeatConnector();
 
-        Map<Map<String, ?>, Map<String, ?>> offsets = Collections.singletonMap(
+        Map<Map<String, ?>, Map<String, ?>> offsets = Map.of(
                 sourcePartition("primary", "backup"),
                 SOURCE_OFFSET
         );
@@ -158,7 +157,7 @@ public class MirrorHeartBeatConnectorTest {
         // since it could indicate that the offsets were reset previously or that no offsets have been committed yet
         // (for a reset operation)
         assertTrue(connector.alterOffsets(null, offsets));
-        assertTrue(connector.alterOffsets(null, Collections.emptyMap()));
+        assertTrue(connector.alterOffsets(null, Map.of()));
     }
 
     @Test
@@ -178,8 +177,8 @@ public class MirrorHeartBeatConnectorTest {
         assertTrue(() -> alterOffsets.apply(partition));
 
         assertTrue(() -> alterOffsets.apply(null));
-        assertTrue(() -> alterOffsets.apply(Collections.emptyMap()));
-        assertTrue(() -> alterOffsets.apply(Collections.singletonMap("unused_partition_key", "unused_partition_value")));
+        assertTrue(() -> alterOffsets.apply(Map.of()));
+        assertTrue(() -> alterOffsets.apply(Map.of("unused_partition_key", "unused_partition_value")));
     }
 
     private static Map<String, Object> sourcePartition(String sourceClusterAlias, String targetClusterAlias) {
