@@ -36,8 +36,6 @@ import com.yammer.metrics.core.MetricsRegistry;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.IntStream;
@@ -63,7 +61,7 @@ public class GroupCoordinatorMetricsTest {
         MetricsRegistry registry = new MetricsRegistry();
         Metrics metrics = new Metrics();
 
-        HashSet<org.apache.kafka.common.MetricName> expectedMetrics = new HashSet<>(Arrays.asList(
+        Set<org.apache.kafka.common.MetricName> expectedMetrics = Set.of(
             metrics.metricName("offset-commit-rate", GroupCoordinatorMetrics.METRICS_GROUP),
             metrics.metricName("offset-commit-count", GroupCoordinatorMetrics.METRICS_GROUP),
             metrics.metricName("offset-expiration-rate", GroupCoordinatorMetrics.METRICS_GROUP),
@@ -106,14 +104,8 @@ public class GroupCoordinatorMetricsTest {
                 "group-count",
                 GroupCoordinatorMetrics.METRICS_GROUP,
                 Map.of("protocol", Group.GroupType.SHARE.toString())),
-            metrics.metricName(
-                "rebalance-rate",
-                GroupCoordinatorMetrics.METRICS_GROUP,
-                Map.of("protocol", Group.GroupType.SHARE.toString())),
-            metrics.metricName(
-                "rebalance-count",
-                GroupCoordinatorMetrics.METRICS_GROUP,
-                Map.of("protocol", Group.GroupType.SHARE.toString())),
+            metrics.metricName("share-group-rebalance-rate", GroupCoordinatorMetrics.METRICS_GROUP),
+            metrics.metricName("share-group-rebalance-count", GroupCoordinatorMetrics.METRICS_GROUP),
             metrics.metricName(
                 "share-group-count",
                 GroupCoordinatorMetrics.METRICS_GROUP,
@@ -159,11 +151,11 @@ public class GroupCoordinatorMetricsTest {
                 "streams-group-count",
                 GroupCoordinatorMetrics.METRICS_GROUP,
                 Map.of("state", StreamsGroupState.NOT_READY.toString()))
-        ));
+        );
 
         try {
             try (GroupCoordinatorMetrics ignored = new GroupCoordinatorMetrics(registry, metrics)) {
-                HashSet<String> expectedRegistry = new HashSet<>(Arrays.asList(
+                Set<String> expectedRegistry = Set.of(
                     "kafka.coordinator.group:type=GroupMetadataManager,name=NumOffsets",
                     "kafka.coordinator.group:type=GroupMetadataManager,name=NumGroups",
                     "kafka.coordinator.group:type=GroupMetadataManager,name=NumGroupsPreparingRebalance",
@@ -171,7 +163,7 @@ public class GroupCoordinatorMetricsTest {
                     "kafka.coordinator.group:type=GroupMetadataManager,name=NumGroupsStable",
                     "kafka.coordinator.group:type=GroupMetadataManager,name=NumGroupsDead",
                     "kafka.coordinator.group:type=GroupMetadataManager,name=NumGroupsEmpty"
-                ));
+                );
 
                 assertMetricsForTypeEqual(registry, "kafka.coordinator.group", expectedRegistry);
                 expectedMetrics.forEach(metricName -> assertTrue(metrics.metrics().containsKey(metricName), metricName + " is missing"));
@@ -306,16 +298,14 @@ public class GroupCoordinatorMetricsTest {
 
         shard.record(SHARE_GROUP_REBALANCES_SENSOR_NAME, 50);
         assertMetricValue(metrics, metrics.metricName(
-            "rebalance-rate",
+            "share-group-rebalance-rate",
             GroupCoordinatorMetrics.METRICS_GROUP,
-            "The rate of share group rebalances",
-            "protocol", "share"
+            "The rate of share group rebalances"
         ), 5.0 / 3.0);
         assertMetricValue(metrics, metrics.metricName(
-            "rebalance-count",
+            "share-group-rebalance-count",
             GroupCoordinatorMetrics.METRICS_GROUP,
-            "The total number of share group rebalances",
-            "protocol", "share"
+            "The total number of share group rebalances"
         ), 50);
 
         shard.record(STREAMS_GROUP_REBALANCES_SENSOR_NAME, 50);
