@@ -23,6 +23,12 @@ import org.apache.kafka.common.acl.AclBinding;
 import org.apache.kafka.common.acl.AclBindingFilter;
 import org.apache.kafka.common.errors.NotControllerException;
 import org.apache.kafka.common.errors.TimeoutException;
+import org.apache.kafka.common.metrics.Gauge;
+import org.apache.kafka.common.metrics.Monitorable;
+import org.apache.kafka.common.metrics.PluginMetrics;
+import org.apache.kafka.common.metrics.Sensor;
+import org.apache.kafka.common.metrics.stats.Rate;
+import org.apache.kafka.common.metrics.stats.WindowedCount;
 import org.apache.kafka.common.utils.SecurityUtils;
 import org.apache.kafka.server.authorizer.Action;
 import org.apache.kafka.server.authorizer.AuthorizableRequestContext;
@@ -31,24 +37,24 @@ import org.apache.kafka.server.authorizer.AuthorizerServerInfo;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
+import java.util.concurrent.TimeUnit;
 
 import static org.apache.kafka.server.authorizer.AuthorizationResult.ALLOWED;
 import static org.apache.kafka.server.authorizer.AuthorizationResult.DENIED;
 
 
 /**
- * The standard authorizer which is used in KRaft-based clusters if no other authorizer is
- * configured.
+ * Built-in authorizer implementation that stores ACLs in the metadata log.
  */
-public class StandardAuthorizer implements ClusterMetadataAuthorizer {
+public class StandardAuthorizer implements ClusterMetadataAuthorizer, Monitorable {
     public static final String SUPER_USERS_CONFIG = "super.users";
 
     public static final String ALLOW_EVERYONE_IF_NO_ACL_IS_FOUND_CONFIG = "allow.everyone.if.no.acl.found";
@@ -64,6 +70,8 @@ public class StandardAuthorizer implements ClusterMetadataAuthorizer {
      * sure we have consistent reads when writer tries to change the data.
      */
     private volatile StandardAuthorizerData data = StandardAuthorizerData.createEmpty();
+
+    private AuthorizerMetrics authorizerMetrics;
 
     @Override
     public void setAclMutator(AclMutator aclMutator) {
@@ -84,11 +92,6 @@ public class StandardAuthorizer implements ClusterMetadataAuthorizer {
         data = data.copyWithNewLoadingComplete(true);
         data.log.info("Completed initial ACL load process.");
         initialLoadFuture.complete(null);
-    }
-
-    // Visible for testing
-    public CompletableFuture<Void> initialLoadFuture() {
-        return initialLoadFuture;
     }
 
     @Override
@@ -124,7 +127,7 @@ public class StandardAuthorizer implements ClusterMetadataAuthorizer {
         Map<Endpoint, CompletableFuture<Void>> result = new HashMap<>();
         for (Endpoint endpoint : serverInfo.endpoints()) {
             if (serverInfo.earlyStartListeners().contains(
-                    endpoint.listenerName().orElse(""))) {
+                    endpoint.listener())) {
                 result.put(endpoint, CompletableFuture.completedFuture(null));
             } else {
                 result.put(endpoint, initialLoadFuture);
@@ -142,6 +145,7 @@ public class StandardAuthorizer implements ClusterMetadataAuthorizer {
         for (Action action : actions) {
             AuthorizationResult result = curData.authorize(requestContext, action);
             results.add(result);
+            authorizerMetrics.recordAuthorizerMetrics(result);
         }
         return results;
     }
@@ -190,7 +194,7 @@ public class StandardAuthorizer implements ClusterMetadataAuthorizer {
 
     static Set<String> getConfiguredSuperUsers(Map<String, ?> configs) {
         Object configValue = configs.get(SUPER_USERS_CONFIG);
-        if (configValue == null) return Collections.emptySet();
+        if (configValue == null) return Set.of();
         String[] values = configValue.toString().split(";");
         Set<String> result = new HashSet<>();
         for (String value : values) {
@@ -207,5 +211,46 @@ public class StandardAuthorizer implements ClusterMetadataAuthorizer {
         Object configValue = configs.get(ALLOW_EVERYONE_IF_NO_ACL_IS_FOUND_CONFIG);
         if (configValue == null) return DENIED;
         return Boolean.parseBoolean(configValue.toString().trim()) ? ALLOWED : DENIED;
+    }
+
+    @Override
+    public void withPluginMetrics(PluginMetrics metrics) {
+        this.authorizerMetrics = new AuthorizerMetrics(metrics);
+    }
+
+    private class AuthorizerMetrics {
+        private final Sensor authorizationAllowedSensor;
+        private final Sensor authorizationDeniedSensor;
+        private final Sensor authorizationRequestSensor;
+
+        private AuthorizerMetrics(PluginMetrics metrics) {
+            authorizationAllowedSensor = metrics.addSensor("authorizer-authorization-allowed");
+            authorizationAllowedSensor.add(
+                    metrics.metricName("authorization-allowed-rate-per-minute", "The number of authorization allowed per minute", new LinkedHashMap<>()),
+                    new Rate(TimeUnit.MINUTES, new WindowedCount()));
+
+            authorizationDeniedSensor = metrics.addSensor("authorizer-authorization-denied");
+            authorizationDeniedSensor.add(
+                    metrics.metricName("authorization-denied-rate-per-minute", "The number of authorization denied per minute", new LinkedHashMap<>()),
+                    new Rate(TimeUnit.MINUTES, new WindowedCount()));
+
+            authorizationRequestSensor = metrics.addSensor("authorizer-authorization-request");
+            authorizationRequestSensor.add(
+                    metrics.metricName("authorization-request-rate-per-minute", "The number of authorization request per minute", new LinkedHashMap<>()),
+                    new Rate(TimeUnit.MINUTES, new WindowedCount()));
+
+            metrics.addMetric(
+                    metrics.metricName("acls-total-count", "The number of acls defined", new LinkedHashMap<>()),
+                    (Gauge<Integer>) (config, now) -> aclCount());
+        }
+
+        private void recordAuthorizerMetrics(AuthorizationResult authorizationResult) {
+            if (authorizationResult == ALLOWED) {
+                authorizationAllowedSensor.record();
+            } else {
+                authorizationDeniedSensor.record();
+            }
+            authorizationRequestSensor.record();
+        }
     }
 }
