@@ -23,9 +23,8 @@ import org.apache.kafka.common.metadata.TopicRecord;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
-import java.util.Arrays;
+import java.util.List;
 
-import static java.util.Collections.emptyList;
 import static org.apache.kafka.metadata.RecordTestUtils.testRecord;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -39,7 +38,7 @@ public class RecordListWriterTest {
         writer.write(testRecord(0));
         writer.write(testRecord(1));
         writer.close(true);
-        assertEquals(Arrays.asList(testRecord(0), testRecord(1)), writer.records());
+        assertEquals(List.of(testRecord(0), testRecord(1)), writer.records());
     }
 
     @Test
@@ -47,7 +46,7 @@ public class RecordListWriterTest {
         RecordListWriter writer = new RecordListWriter();
         writer.write(testRecord(0));
         writer.close();
-        assertEquals(emptyList(), writer.records());
+        assertEquals(List.of(), writer.records());
     }
 
     @Test
