@@ -26,9 +26,8 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
@@ -59,7 +58,7 @@ public class ListenerInfoTest {
         "example2.com",
         9094);
 
-    private static final List<Endpoint> ALL = Arrays.asList(
+    private static final List<Endpoint> ALL = List.of(
         INTERNAL,
         EXTERNAL,
         SSL,
@@ -67,23 +66,23 @@ public class ListenerInfoTest {
 
     @Test
     public void testNullHostname() {
-        assertNull(ListenerInfo.create(Collections.singletonList(INTERNAL)).firstListener().host());
+        assertNull(ListenerInfo.create(List.of(INTERNAL)).firstListener().host());
     }
 
     @Test
     public void testNullHostnameGetsResolved() throws Exception {
-        assertNotNull(ListenerInfo.create(Collections.singletonList(INTERNAL)).
+        assertNotNull(ListenerInfo.create(List.of(INTERNAL)).
                 withWildcardHostnamesResolved().firstListener().host());
     }
 
     @Test
     public void testEmptyHostname() {
-        assertEquals("", ListenerInfo.create(Collections.singletonList(SSL)).firstListener().host());
+        assertEquals("", ListenerInfo.create(List.of(SSL)).firstListener().host());
     }
 
     @Test
     public void testEmptyHostnameGetsResolved() throws Exception {
-        assertNotEquals("", ListenerInfo.create(Collections.singletonList(SSL)).
+        assertNotEquals("", ListenerInfo.create(List.of(SSL)).
                 withWildcardHostnamesResolved().firstListener().host());
     }
 
@@ -95,16 +94,16 @@ public class ListenerInfoTest {
             endpoints.add(ALL.get((i + startIndex) % ALL.size()));
         }
         ListenerInfo listenerInfo = ListenerInfo.create(endpoints);
-        assertEquals(ALL.get(startIndex).listenerName().get(),
-            listenerInfo.firstListener().listenerName().get());
+        assertEquals(ALL.get(startIndex).listener(),
+            listenerInfo.firstListener().listener());
     }
 
     @ParameterizedTest
     @ValueSource(ints = {0, 1, 2, 3})
     public void testCreateWithExplicitFirstListener(int startIndex) {
-        ListenerInfo listenerInfo = ListenerInfo.create(ALL.get(startIndex).listenerName(), ALL);
-        assertEquals(ALL.get(startIndex).listenerName().get(),
-            listenerInfo.firstListener().listenerName().get());
+        ListenerInfo listenerInfo = ListenerInfo.create(Optional.of(ALL.get(startIndex).listener()), ALL);
+        assertEquals(ALL.get(startIndex).listener(),
+            listenerInfo.firstListener().listener());
     }
 
     @Test
@@ -120,14 +119,14 @@ public class ListenerInfoTest {
     @Test
     public void testToControllerRegistrationRequestFailsOnNullHost() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Collections.singletonList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 toControllerRegistrationRequest());
     }
 
     @Test
     public void testToControllerRegistrationRequestFailsOnZeroPort() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Collections.singletonList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 withWildcardHostnamesResolved().
                 toControllerRegistrationRequest());
     }
@@ -145,14 +144,14 @@ public class ListenerInfoTest {
     @Test
     public void testToControllerRegistrationRecordFailsOnNullHost() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Collections.singletonList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 toControllerRegistrationRecord());
     }
 
     @Test
     public void testToControllerRegistrationRecordFailsOnZeroPort() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Collections.singletonList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 withWildcardHostnamesResolved().
                 toControllerRegistrationRecord());
     }
@@ -170,14 +169,14 @@ public class ListenerInfoTest {
     @Test
     public void testToBrokerRegistrationRequestFailsOnNullHost() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Collections.singletonList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 toBrokerRegistrationRequest());
     }
 
     @Test
     public void testToBrokerRegistrationRequestFailsOnZeroPort() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Collections.singletonList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 withWildcardHostnamesResolved().
                 toBrokerRegistrationRequest());
     }
@@ -195,21 +194,21 @@ public class ListenerInfoTest {
     @Test
     public void testToBrokerRegistrationRecordFailsOnNullHost() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Collections.singletonList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 toBrokerRegistrationRecord());
     }
 
     @Test
     public void testToBrokerRegistrationRecordFailsOnZeroPort() {
         assertThrows(RuntimeException.class,
-            () -> ListenerInfo.create(Collections.singletonList(INTERNAL)).
+            () -> ListenerInfo.create(List.of(INTERNAL)).
                 withWildcardHostnamesResolved().
                 toBrokerRegistrationRecord());
     }
 
     @Test
     public void testToString() {
-        ListenerInfo listenerInfo = ListenerInfo.create(Arrays.asList(EXTERNAL, SASL_PLAINTEXT));
+        ListenerInfo listenerInfo = ListenerInfo.create(List.of(EXTERNAL, SASL_PLAINTEXT));
         assertEquals("ListenerInfo(Endpoint(listenerName='EXTERNAL', securityProtocol=SASL_SSL, host='example.com', port=9092), " +
             "Endpoint(listenerName='SASL_PLAINTEXT', securityProtocol=SASL_PLAINTEXT, host='example2.com', port=9094))",
             listenerInfo.toString());
