@@ -29,7 +29,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.TreeMap;
@@ -123,7 +122,7 @@ public final class Kibosh {
         private final List<KiboshFaultSpec> faults;
 
         public static final KiboshControlFile EMPTY =
-            new KiboshControlFile(Collections.emptyList());
+            new KiboshControlFile(List.of());
 
         public static KiboshControlFile read(Path controlPath) throws IOException {
             byte[] controlFileBytes = Files.readAllBytes(controlPath);
